--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 <body>
     <h1 class="h1-game-press-right-key">Гра натисни правильну клавішу</h1>
 
-    <div class="key-back"></div>
+    <div class="key-back keys-container"></div>
     <div class="key"></div>
-    <div class="state"></div>
+    <div class="state keys-container"></div>
+
+    <script src="./js/index.js" type="module"></script>
 </body>
 </html>
