--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <h1 class="h1-game-press-right-key">Гра натисни правильну клавішу</h1>
 
     <div class="key-back keys-container"></div>
-    <div class="key"></div>
+    <div id="key" class="key">Натисни кнопку 'Почати гру'</div>
     <div class="state keys-container"></div>
+<button class="js-start-game">Почати гру</button>
 
     <script src="./js/index.js" type="module"></script>
 </body>
