complited first game

--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 <body>
     <h1 class="h1-game-press-right-key">Гра натисни правильну клавішу</h1>
 
-    <div class="key-back keys-container"></div>
-    <div id="key" class="key">Натисни кнопку 'Почати гру'</div>
-    <div class="state keys-container"></div>
+    <div id="key" class="key-back keys-container">Натисни кнопку 'Почати гру'</div>
+    <div class="state keys-container">Очікую початку гри...</div>
 <button class="js-start-game">Почати гру</button>
 
     <script src="./js/index.js" type="module"></script>
